tests/error/02.program
{
    string_s = "0123456789";
    print(string_s[0 : 11]);
}